Refactor project structure and add new FXML views for student performance analysis
- Updated paths in sources.txt to reflect new project structure.
- Added RUN_GUIDE.md for detailed instructions on setting up and running the application.
- Created CSS styles for the application in bin/css/styles.css.
- Implemented FXML views for adding students, subjects, entering marks, and performance analysis.
- Developed main view with menu and tabs for navigating between different functionalities.
- Added tables and charts for displaying student and subject data.
- Included error handling and message labels in various views for user feedback.